SFUSA/force-app/main/default/objects/Incident__c/fields/Account_Name__c.field-meta.xml
<CustomField>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>