SFUSA/force-app/main/default/objects/Incident__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
        <fullName>Additional_Information__c</fullName>
        <description>Enter any additional information regarding the FACTS call here.</description>
        <label>Additional Information</label>
        <type>TextArea</type>
    </CustomField>