SFUSA/force-app/main/default/objects/Incident__c/fields/Bottling_Plant__c.field-meta.xml
<CustomField>
        <fullName>Bottling_Plant__c</fullName>
        <label>Bottling Plant</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCU-TEC</fullName>
                </value>
                <value>
                    <fullName>Alepat Taylor</fullName>
                </value>
                <value>
                    <fullName>Behror</fullName>
                </value>
                <value>
                    <fullName>Blue Ocean</fullName>
                </value>
                <value>
                    <fullName>Burlington</fullName>
                </value>
                <value>
                    <fullName>ADL</fullName>
                </value>
                <value>
                    <fullName>Carolina Beer</fullName>
                </value>
                <value>
                    <fullName>CCA - AB Co.</fullName>
                </value>
                <value>
                    <fullName>CCA - Australia</fullName>
                </value>
                <value>
                    <fullName>CCA - QLD Richlands</fullName>
                </value>
                <value>
                    <fullName>CCA - VIC Moorabbin</fullName>
                </value>
                <value>
                    <fullName>CCA - WA Perth</fullName>
                </value>
                <value>
                    <fullName>Clermont</fullName>
                </value>
                <value>
                    <fullName>Cooley</fullName>
                </value>
                <value>
                    <fullName>Global Quality</fullName>
                </value>
                <value>
                    <fullName>Cott - Mexico</fullName>
                </value>
                <value>
                    <fullName>Cott - Mississauga</fullName>
                </value>
                <value>
                    <fullName>Cott - Viscount</fullName>
                </value>
                <value>
                    <fullName>Mexico – DHL</fullName>
                </value>
                <value>
                    <fullName>DIS</fullName>
                </value>
                <value>
                    <fullName>El Tesoro</fullName>
                </value>
                <value>
                    <fullName>Frankfort</fullName>
                </value>
                <value>
                    <fullName>Glenturner</fullName>
                </value>
                <value>
                    <fullName>Hooghoudt</fullName>
                </value>
                <value>
                    <fullName>Jarnac</fullName>
                </value>
                <value>
                    <fullName>Jerez</fullName>
                </value>
                <value>
                    <fullName>LF Logistics, Singapore</fullName>
                </value>
                <value>
                    <fullName>MacIntyre Scott (UK)</fullName>
                </value>
                <value>
                    <fullName>Loretto</fullName>
                </value>
                <value>
                    <fullName>Morrison Bowmore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>