SFUSA/force-app/main/default/objects/Incident__c/fields/Brand_Type__c.field-meta.xml
<CustomField>
        <fullName>Brand_Type__c</fullName>
        <label>Brand Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>(ri)1 STRAIGHT RYE WHISKEY</fullName>
                </value>
                <value>
                    <fullName>100 ANOS ANEJO</fullName>
                </value>
                <value>
                    <fullName>100 ANOS BLANCO/PLATA/SILVER</fullName>
                </value>
                <value>
                    <fullName>100 ANOS REPOSADO</fullName>
                </value>
                <value>
                    <fullName>12 GIN</fullName>
                </value>
                <value>
                    <fullName>15 YEAR</fullName>
                </value>
                <value>
                    <fullName>16 YEAR</fullName>
                </value>
                <value>
                    <fullName>2 GINGERS ORIGINAL</fullName>
                </value>
                <value>
                    <fullName>30 YEAR</fullName>
                </value>
                <value>
                    <fullName>8YO</fullName>
                </value>
                <value>
                    <fullName>AFTERSHOCK BLACK CHERRY</fullName>
                </value>
                <value>
                    <fullName>AFTERSHOCK BLUE</fullName>
                </value>
                <value>
                    <fullName>AFTERSHOCK CRYSTAL</fullName>
                </value>
                <value>
                    <fullName>AFTERSHOCK RED</fullName>
                </value>
                <value>
                    <fullName>ALBERTA DARK BATCH</fullName>
                </value>
                <value>
                    <fullName>ALBERTA ORIGINAL WHISKY</fullName>
                </value>
                <value>
                    <fullName>ALBERTA PREMIUM DARK HORSE</fullName>
                </value>
                <value>
                    <fullName>ALBERTA PREMIUM ORIGINAL</fullName>
                </value>
                <value>
                    <fullName>ALBERTA PREMIUM VODKA - FLAVORED</fullName>
                </value>
                <value>
                    <fullName>ALBERTA PREMIUM VODKA - ORIGINAL</fullName>
                </value>
                <value>
                    <fullName>ALBERTA PURE FLAVORED</fullName>
                </value>
                <value>
                    <fullName>ALBERTA PURE VODKA</fullName>
                </value>
                <value>
                    <fullName>ALBERTA SPRINGS ORIGINAL</fullName>
                </value>
                <value>
                    <fullName>ALBERTA VODKA</fullName>
                </value>
                <value>
                    <fullName>AO VODKA</fullName>
                </value>
                <value>
                    <fullName>ARDMORE LEGACY</fullName>
                </value>
                <value>
                    <fullName>ARDMORE MALT</fullName>
                </value>
                <value>
                    <fullName>ARDMORE PORTWOOD</fullName>
                </value>
                <value>
                    <fullName>ARDMORE TRADITIONAL PEATED</fullName>
                </value>
                <value>
                    <fullName>ARDMORE TRIPLE WOOD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>