SFUSA/force-app/main/default/objects/Incident__c/fields/Issue_Origin__c.field-meta.xml
<CustomField>
        <fullName>Issue_Origin__c</fullName>
        <label>Issue Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>