SFUSA/force-app/main/default/objects/Incident__c/fields/Lot_Code_s__c.field-meta.xml
<CustomField>
        <fullName>Lot_Code_s__c</fullName>
        <label>Lot Code(s)</label>
        <length>225</length>
        <type>Text</type>
    </CustomField>