SFUSA/force-app/main/default/objects/Incident__c/fields/Product_Description__c.field-meta.xml
<CustomField>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>