SFUSA/force-app/main/default/objects/Incident__c/fields/Recommendation__c.field-meta.xml
<CustomField>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Action</fullName>
                </value>
                <value>
                    <fullName>Product Return</fullName>
                </value>
                <value>
                    <fullName>Product Reworked On-Site</fullName>
                </value>
                <value>
                    <fullName>Product Destroyed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>