SFUSA/force-app/main/default/objects/Incident__c/fields/SKU__c.field-meta.xml
<CustomField>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>