SFUSA/force-app/main/default/objects/Incident__c/fields/UPC__c.field-meta.xml
<CustomField>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>