SFUSA/force-app/main/default/objects/Incident__c/recordTypes/Distributor.recordType-meta.xml
<RecordType>
        <fullName>Distributor</fullName>
        <active>true</active>
        <label>Distributor</label>
    </RecordType>