SFUSA/force-app/main/default/objects/Incident__c/recordTypes/FACTS.recordType-meta.xml
<RecordType>
        <fullName>FACTS</fullName>
        <active>true</active>
        <description>FACTS incident for Quality Claims</description>
        <label>FACTS</label>
    </RecordType>