SFUSA/force-app/main/default/objects/Incident__c/listViews/All1.listView-meta.xml
<ListView>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>